<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    
    <!-- Text judul atas - ngambil dari string -->
    <TextView
        android:id="@+id/textBiodata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/biodata"
		android:textSize="21sp"
		android:layout_gravity="center"
		android:layout_marginTop="10dip"
		/>
    
    
    <!-- Garis batas 1 -->
    <View
        android:id="@+id/garisBatas1"
        android:layout_height="2.5dip"
        android:layout_width="wrap_content"
        android:background="#FF909090"
        android:layout_marginTop="15dip"
        android:layout_marginBottom="8dip"
        />
    
    
    <TableLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:stretchColumns="1"
        >
        
        <!-- Nama -->
        <TableRow>
		    <TextView
		        android:id="@+id/nama"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/nama"
		        />
		    
		    <!-- Edit text untuk nama -->
		    <EditText
		        android:id="@+id/enternama"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="20dip"
		        />
	    </TableRow>
	    
	    
        <!-- Alamat -->
        <TableRow>
		    <TextView
		        android:id="@+id/alamat"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/alamat"
		        />                                                                         
		    
		    <!-- edit text untuk alamat -->
		    <EditText
		        android:id="@+id/enteralamat"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="20dip"
		        />
	    </TableRow>
	    
	    
        <!-- Kota/Kab -->
        <TableRow>
		   	<TextView
		        android:id="@+id/kota"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/kota"
		        />
		   	
		   	
		   	<!-- Autocomplete Textview untuk kota/kab -->
		   	<AutoCompleteTextView
		   	    android:id="@+id/enterkota"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="20dip"
		        android:completionThreshold="1"
		   	    />
	   	</TableRow>
	   	
	   	
	   	<TableRow>
	   	    <!-- Agama -->
		   	<TextView
		        android:id="@+id/agama"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/agama"
		        />
		   	
		   	
		   	<!-- Autocomplete Textview untuk agama -->
		   	<AutoCompleteTextView
		   	    android:id="@+id/enteragama"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="20dip"
		        android:completionThreshold="1"
		   	    />
	   	</TableRow>
	   	
	   	
	   	<TableRow>
	   	    <!-- Hobi -->
		   	<TextView
		        android:id="@+id/hobi"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/hobi"
		        />
		   	
		   	
		   	<!-- Autocomplete Textview untuk hobi -->
		   	<AutoCompleteTextView
		   	    android:id="@+id/enterhobi"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="20dip"
		        android:completionThreshold="1"
		   	    />
		</TableRow>
	   	
	   	
	   	<!-- Garis Batas 2 -->
	   	<View
	        android:id="@+id/garisBatas2"
	        android:layout_height="2.5dip"
	        android:layout_width="wrap_content"
	        android:background="#FF909090"
	        android:layout_marginTop="15dip"
	        />
	   	
	   	
	   	<LinearLayout
	   	    android:id="@+id/layoutTombol"
	   	    android:layout_width="fill_parent"
	   	    android:layout_height="fill_parent"
	   	    android:orientation="horizontal"
	   	    android:layout_weight="1"
	   	    >
				
			   	<Button
			   	    android:id="@+id/tombolSimpan"
			   	    android:layout_width="wrap_content"
			   	    android:layout_height="wrap_content"
			   	    android:text="@string/simpan"
			   	    android:layout_weight="1"
			   	    android:layout_marginTop="12dip"
			   	    />
			   	
			   	
			   	<!-- Tombol Hapus -->
			   	<Button
			   	    android:id="@+id/tombolHapus"
			   	    android:layout_width="wrap_content"
			   	    android:layout_height="wrap_content"
			   	    android:text="@string/hapus"
			   	    android:layout_marginTop="12dip"
			   	    android:layout_weight="1"
			   	    />
	   	</LinearLayout>
	   	
   	</TableLayout>
   	
</LinearLayout>